2000-11-15  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (changed_handler): offset redraw rect by
	xoffset in addition to yoffset, so horizontal scrolling doesn't
	break redraws

2000-11-15  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextdisplay.c (gtk_text_layout_draw): Remove extra pixel
	from the cursor
	(render_layout_line): fix reversed test that caused weird
	underlines to get drawn

2000-11-15  Alexander Larsson  <alla@lysator.liu.se>

	* gdk/linux-fb/gdkprivate-fb.h:
	Fix debug macros.
	
2000-11-15  Alexander Larsson  <alla@lysator.liu.se>

	* gdk/linux-fb/gdkprivate-fb.h:
	Added virtual functions set_pixel, get_color,
	fill_span and draw_drawable to the GC.
	Added global _gdk_fb_screen_gc to use instead of
	NULL when drawing to the screen.
	Added _gdk_fb_gc_calc_state() prototype.

	* gdk/linux-fb/gdkgc-fb.c:
	Call _gdk_fb_gc_calc_state() on any gc state change.

	* gdk/linux-fb/gdkglobals-fb.c:
	Add _gdk_fb_screen_gc
		
	* gdk/linux-fb/gdkdrawable-fb2.c:
	_gdk_fb_gc_calc_state() calculates best functions
	for the GC state and depth.
	Moved bpp specialized code to separate functions.
	Added optimized 24 bpp AA draw_drawable.

	* gdk/linux-fb/gdkevents-fb.c:
	Silence gcc warning.

	* gdk/linux-fb/gdkimage-fb.c:
	Use _gdk_fb_screen_gc

	* gdk/linux-fb/gdkwindow-fb.c:
	Init and use _gdk_fb_screen_gc

	* gdk/linux-fb/mitypes.h:
	Remove unused types.

2000-11-14  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextlayout.c (add_cursor): use PANGO_PIXELS() to convert
	to pixels

2000-11-14  Havoc Pennington  <hp@pobox.com>

	* gtk/testtextbuffer.c (fill_buffer): change "offset" to "rise"

	* gtk/gtktexttypes.h (GTK_TEXT_UNKNOWN_CHAR): Add macro for
	unknown char, no real reason we were using a variable. 
	Remove gtk_text_unknown_char variable. Fix all the text widget
	files accordingly.

	* gtk/gtktexttypes.c: Change "unknown character" to 0xFFFC, 
	since the Unicode spec seems to prefer that character for our
	purposes.
