@@ -1,5 +1,12 @@
 2000-11-15  Havoc Pennington  <hp@redhat.com>
 
+	* gtk/gtktextlayout.c (set_para_values): If indent is negative,
+	don't move the first line out into the margin, instead move the
+	whole paragraph in order to make space for the first line within 
+	the margin
+
+2000-11-15  Havoc Pennington  <hp@redhat.com>
+
 	* gtk/gtktextview.c (changed_handler): offset redraw rect by
 	xoffset in addition to yoffset, so horizontal scrolling doesn't
 	break redraws
